DPO-1835   SensorDataS3WriterTest kuntoon (#103)
* DPO-1835 SensorDataS3WriterTest kuntoon
* commonia käyttöön
* Muokkausaikaleiman bugin korjaus